# git_info

./: .gitignore  Cargo.toml  README.md  Rocket.toml
git_info/: Cargo.toml
git_info/src/: lib.rs  main.rs
src/: main.rs
