[package]
name = "git_server"
version = "0.1.0"
authors = ["Carlos Santos <cs4026@stern.nyu.edu>"]
edition = "2018"

[workspace]
members=["./git_info"]

[dependencies]
rocket = "0.3.16"
rocket_codegen = "0.3.16"
rocket_contrib = "0.3.16"
git2 = "0.7"
docopt = "1.0.0"
serde = "1.0.71"
serde_derive = "1.0.70"
serde_json = "1.0.26"
git_info = {path ="./git_info"}
